--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>RachelDesign</title>
+<title>Rachel Xu Design</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/flexslider.css">
 <link rel="stylesheet" href="css/main.css">
@@ -27,7 +27,7 @@
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
           <li><a href="#services">About me</a></li>
-          <li><a href="#portfolio">projects</a></li>
+          <li><a href="/projects">projects</a></li>
           <li><a href="#contact">contact</a></li>
         </ul>
       </nav>
@@ -71,43 +71,7 @@
           </div>
         </div>
         <img src="simple-planner/image/hero-mainpage.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="clouds/index.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-            <h3>Crying cloud</h3>
-            <h4>P5JS Interactive Animation</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/cloud.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="colorful-ball/index.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-            <h3>colorful balls</h3>
-            <h4>P5JS interactive animation</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/balls.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="motion-emotion/index.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-
-            <h3>motion and emotion </h3>
-            <h4>P5JS interactive animation</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/motion-emotion.jpg" class="img-responsive" alt=""> </a> </div>
-		  <div class="col-sm-6 portfolio-item">
-			<a href="minion/index.html" class="portfolio-link">
-				<div class="caption">
-				  <div class="caption-content">
-					<h3>minion and his icecream</h3>
-            		<h4>P5JS Interactive Animation</h4>
-				  </div>
-				</div>
-			<img src="images/portfolio/minion.jpg" class="img-responsive" alt="">
-			</a>
-		  </div>
-          <div class="col-sm-6 portfolio-item"> <a href="ultimate-match/index.html" class="portfolio-link">
+      <div class="col-sm-6 portfolio-item"> <a href="ultimate-match/index.html" class="portfolio-link">
         <div class="caption">
           <div class="caption-content">
 
