--- a/simple-planner/index.html
+++ b/simple-planner/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>simple-planner</title>
+<title>Simple Planner | Rachel Xu</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/flexslider.css">
 <link rel="stylesheet" href="../css/main.css">
