--- a/ultimate-match/index.html
+++ b/ultimate-match/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Ultimate Match</title>
+	<title>Ultimate Match | Rachel Xu</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/flexslider.css">
 	<link rel="stylesheet" href="../css/main.css">
