--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Rachel Xu Design</title>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/flexslider.css">
 <link rel="stylesheet" href="css/main.css">
@@ -21,138 +23,146 @@
 
 <!-- Header Section -->
 <section class="tophead" role="tophead">
-  <!-- Navigation Section -->
-  <header id="header">
-    <div class="header-content clearfix"><a class="logo" href="#">Rachel</a>
-      <nav class="navigation" role="navigation">
-        <ul class="primary-nav">
-          <li><a href="#services">About me</a></li>
-          <li><a href="/projects">projects</a></li>
-          <li><a href="#contact">contact</a></li>
-        </ul>
-      </nav>
-      <a href="#" class="nav-toggle">Menu<span></span></a> </div>
-  </header>
-  <!-- Navigation Section -->
+	<!-- Navigation Section -->
+	<header id="header">
+		<div class="header-content clearfix"><a class="logo" href="#">Rachel</a>
+			<nav class="navigation" role="navigation">
+				<ul class="primary-nav">
+					<li><a href="#" class="current-link">Home</a></li>
+					<li><a href="/about">About me</a></li>
+					<li><a href="#contact">contact</a></li>
+				</ul>
+			</nav>
+			<a href="#" class="nav-toggle">Menu<span></span></a> </div>
+	</header>
+	<!-- Navigation Section -->
 </section>
-<!-- Header Section -->
-<!-- Slider Section -->
-
-<!-- Slider Section -->
-<!-- Service Section -->
-<section id="services" class="section services">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-6 col-sm-6 col-lg-2">
-        <div class="services-content">
-         <h4 class="text-center col-lg-offset-0 col-lg-12 services-content__title">about me</h4>
-
-</div>
-      </div>
-      <div class="col-sm-8"> <div class="services-content services-content__container">
-	    <p>Hey, I'm Rachel! </p>
-	    <p>I used to be a team leader at Boeing, focused on creating a magical flying experience. I love research and design. Earlier this year, I made the decision to expand my expertise by exploring the dynamic tech industry. Now, I am a full-time grad student in the Human-Centered Design and Engineering program at the University of Washington and am running a design and consulting firm on the side.</p>
-		  <p>You can view my <a href="http://www.kunxudesign.com">previous industrial design work here.</a></p>
-	    <p>Besides research and design, I also like painting, dancing, yoga, world traveling, and reading. One of my favorite books is “Sapiens” by Yuval Noah Harari.</p>
-    </div>
-  </div>
-</section>
-<!-- Service Section -->
 
 <!-- portfolio grid section -->
 <section id="portfolio" class="section portfolio" style="max-width: 1700px;">
-  <div class="container-fluid">
-	  <div class="row">
-      <div class="col-sm-6 portfolio-item"> <a href="simple-planner/index.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
-            <h3>Simple Planner</h3>
-            <h4>User Experience Design</h4>
-          </div>
-        </div>
-        <img src="simple-planner/image/hero-mainpage.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="ultimate-match/index.html" class="portfolio-link">
-        <div class="caption">
-          <div class="caption-content">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-6 portfolio-item"> <a href="/simple-planner" class="portfolio-link">
+				<div class="caption">
+					<div class="caption-content">
+						<h3>Simple Planner</h3>
+						<h4>User Experience Design</h4>
+					</div>
+				</div>
+				<img src="simple-planner/images/hero-mainpage.jpg" class="img-responsive" alt=""></a>
+			</div>
 
-            <h3>Ultimate Match</h3>
-            <h4>Speculative Design_Mixed Reality</h4>
-          </div>
-        </div>
-        <img src="images/portfolio/ultimate-match.jpg" class="img-responsive" alt=""> </a> </div>
+			<div class="col-sm-6 portfolio-item"> <a href="/ultimate-match" class="portfolio-link">
+				<div class="caption">
+					<div class="caption-content">
+						<h3>Ultimate Match</h3>
+						<h4>Speculative Design_Mixed Reality</h4>
+					</div>
+				</div>
+				<img src="images/portfolio/ultimate-match.jpg" class="img-responsive" alt=""></a>
+			</div>
 
+			<div class="col-sm-6 portfolio-item"> <a href="/interactive" class="portfolio-link">
+				<div class="caption">
+					<div class="caption-content">
+						<h3>Interactive Experiments</h3>
+						<h4>Explorative Animation Collection</h4>
+					</div>
+				</div>
+				<img src="images/portfolio/balls.jpg" class="img-responsive" alt=""></a>
+			</div>
 
+			<div class="col-sm-6 portfolio-item"> <a href="/expanse" class="portfolio-link">
+				<div class="caption">
+					<div class="caption-content">
+						<h3>Please Remain Seated</h3>
+						<h4>Reshaping the Sedentary Inflight Experience</h4>
+					</div>
+				</div>
+				<img src="images/expanse/021.jpg" class="img-responsive" alt=""></a>
+			</div>
 
+			<div class="col-sm-6 portfolio-item"> <a href="/immersive-cabin" class="portfolio-link">
+				<div class="caption">
+					<div class="caption-content">
+						<h3>Immersive Cabin Experience</h3>
+						<h4>Research to Reduce visually-induced motion sickness</h4>
+					</div>
+				</div>
+				<img src="/immersive-cabin/boeing-allure.jpg" class="img-responsive" alt=""></a>
+			</div>
+		</div>
+	</div>
 </section>
 <!-- portfolio grid section -->
 
 <!-- Testimonials section -->
 <section id="testimonials" class="section testimonials">
-  <div class="container-fluid">
-    <div class="row no-gutter">
-      <div class="flexslider">
-        <ul class="slides">
-          <li>
-            <div class="col-md-12">
-              <blockquote>
-                <h1>"One should aim not at being possible to understand, but at being impossible to misunderstand. " </h1>
-                <p>Quintilian</p>
-              </blockquote>
-            </div>
-          </li>
-          <li>
-            <div class="col-md-12">
-              <blockquote>
-                <h1>"Ease of use may be invisible, but its absence sure isn’t." </h1>
-                <p>IBM Design on Twitter</p>
-              </blockquote>
-            </div>
-          </li>
-          <li>
-            <div class="col-md-12">
-              <blockquote>
-                <h1>"Good design is about process, not product." </h1>
-                <p> Jared Sinclair</p>
-              </blockquote>
-            </div>
-          </li>
-          <li>
-            <div class="col-md-12">
-              <blockquote>
-                <h1>"Make every detail perfect &amp; limit the number of details to perfect." </h1>
-                <p>Jack dorsey</p>
-              </blockquote>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+	<div class="container-fluid">
+		<div class="row no-gutter">
+			<div class="flexslider">
+				<ul class="slides">
+					<li>
+						<div class="col-md-12">
+							<blockquote>
+								<h1>"One should aim not at being possible to understand, but at being impossible to misunderstand. " </h1>
+								<p>Quintilian</p>
+							</blockquote>
+						</div>
+					</li>
+					<li>
+						<div class="col-md-12">
+							<blockquote>
+								<h1>"Ease of use may be invisible, but its absence sure isn’t." </h1>
+								<p>IBM Design on Twitter</p>
+							</blockquote>
+						</div>
+					</li>
+					<li>
+						<div class="col-md-12">
+							<blockquote>
+								<h1>"Good design is about process, not product." </h1>
+								<p> Jared Sinclair</p>
+							</blockquote>
+						</div>
+					</li>
+					<li>
+						<div class="col-md-12">
+							<blockquote>
+								<h1>"Make every detail perfect &amp; limit the number of details to perfect." </h1>
+								<p>Jack dorsey</p>
+							</blockquote>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </section>
 <!-- Testimonials section -->
 
 <!-- footer section -->
 <footer id="contact" class="footer">
-  <div class="container-fluid">
-    <div class="col-md-2 left">
-      <h4>Location</h4>
-      <p>Greater Seattle Area</p>
-    </div>
-    <div class="col-md-2 left">
-      <h4>Contact</h4>
-      <p>kunxudesign@gmail.com</p>
-    </div>
-    <div class="col-md-2 left">
-      <h4>Social presense</h4>
-      <ul class="footer-share">
-        <li><a href="https://www.linkedin.com/in/kunxudesign/"><i class="fa fa-linkedin"></i></a></li>
-      </ul>
-    </div>
-    <div class="col-md-6 right">
-      <p>© 2018 All rights reserved. <br>
-        Made with <em class="fa fa-heart pulse"></em> by <a href="http://www.kunxudesign.com/">Rachel</a></p>
-    </div>
-  </div>
+	<div class="container-fluid">
+		<div class="col-md-2 left">
+			<h4>Location</h4>
+			<p>Greater Seattle Area</p>
+		</div>
+		<div class="col-md-2 left">
+			<h4>Contact</h4>
+			<p>kunxudesign@gmail.com</p>
+		</div>
+		<div class="col-md-2 left">
+			<h4>Social presense</h4>
+			<ul class="footer-share">
+				<li><a href="https://www.linkedin.com/in/kunxudesign/"><i class="fa fa-linkedin"></i></a></li>
+			</ul>
+		</div>
+		<div class="col-md-6 right">
+			<p>© 2018 All rights reserved. <br>
+				Made with <em class="fa fa-heart pulse"></em> by <a href="http://www.kunxudesign.com/">Rachel</a></p>
+		</div>
+	</div>
 </footer>
 <!-- footer section -->
 
