--- a/interactive/index.html
+++ b/interactive/index.html
@@ -5,13 +5,15 @@
 		<meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Projects | Rachel Xu</title>
+		<title>Interactive Projects | Rachel Xu</title>
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/css/flexslider.css">
 		<link rel="stylesheet" href="/css/main.css">
 		<link rel="stylesheet" href="/css/responsive.css">
 		<link rel="stylesheet" href="/css/animate.min.css">
-		<link rel="stylesheet" href="/projects/projects.css">
+		<link rel="stylesheet" href="/interactive/projects.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	</head>
 <body>
@@ -19,13 +21,12 @@
 <section class="tophead" role="tophead">
 	<!-- Navigation Section -->
 	<header id="header">
-		<div class="header-content clearfix"> <a class="logo" href="#">Rachel</a>
+		<div class="header-content clearfix"> <a class="logo" href="/">Rachel</a>
 			<nav class="navigation" role="navigation">
 				<ul class="primary-nav">
-					<li><a href="/index.html">Home</a></li>
-					<li><a href="/index.html#services">About me</a></li>
-					<li><a href="#">projects</a></li>
-					<li><a href="/index.html#contact">contact</a></li>
+					<li><a href="/">Home</a></li>
+					<li><a href="/about">About me</a></li>
+					<li><a href="/#contact">contact</a></li>
 				</ul>
 			</nav>
 			<a href="#" class="nav-toggle">Menu<span></span></a>
@@ -62,10 +63,10 @@
 <script src="/js/p5.dom.min.js"></script>
 <script src="/js/p5.sound.min.js"></script>
 
-<script src="/projects/colorful-ball/sketch.js"></script>
-<script src="/projects/motion-emotion/sketch.js"></script>
-<script src="/projects/clouds/sketch.js"></script>
-<script src="/projects/minion/sketch.js"></script>
+<script src="/interactive/colorful-ball/sketch.js"></script>
+<script src="/interactive/motion-emotion/sketch.js"></script>
+<script src="/interactive/clouds/sketch.js"></script>
+<script src="/interactive/minion/sketch.js"></script>
 
 <script>
 $(document).ready(function() {
