--- a/simple-planner/index.html
+++ b/simple-planner/index.html
@@ -7,26 +7,27 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Simple Planner | Rachel Xu</title>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/flexslider.css">
 <link rel="stylesheet" href="../css/main.css">
 <link rel="stylesheet" href="../css/responsive.css">
 <link rel="stylesheet" href="../css/animate.min.css">
-<link rel="stylesheet" href="./simple-planner.css">
-<link rel="stylesheet" href="./featherlight.min.css">
+<link rel="stylesheet" href="/simple-planner/simple-planner.css">
+<link rel="stylesheet" href="/simple-planner/featherlight.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
 <section class="tophead" role="tophead">
   <!-- Navigation Section -->
   <header id="header">
-    <div class="header-content clearfix"> <a class="logo" href="../index.html">Rachel</a>
+    <div class="header-content clearfix"> <a class="logo" href="/">Rachel</a>
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../index.html#services">About me</a></li>
-          <li><a href="../index.html#portfolio">projects</a></li>
-          <li><a href="../index.html#contact">contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About me</a></li>
+          <li><a href="/#contact">contact</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
@@ -34,7 +35,7 @@
   <!-- Navigation Section -->
 </section>
 
-<img class="hero-image" src="image/hero.jpg"/>
+<img class="hero-image" src="/simple-planner/images/hero.jpg"/>
 
 <section id="work-detail" class="section work-detail" style="padding:10px">
   <div class="container-fluid simple-planner">
@@ -43,20 +44,20 @@
       <h4 style="font-size: 16px">an Intelligent Logistic Planner for Busy Days</h4>
       <p style="padding-top: 25px; padding-bottom: 25px" >Have you ever experienced the stress of having multiple tasks and events at different times and locations in one day?
 Simple Planner is a smart logistics assistant that can look into your daily schedule and optimize your trip, saving you time and reducing your stress.</p>
-			<a href="#" data-featherlight="./image/daynight1.jpg"> <img style="padding-top: 50px" class="simple-planner__img" src="./image/daynight1.jpg" /> </a>
+			<a href="#" data-featherlight="/simple-planner/images/daynight1.jpg"> <img style="padding-top: 50px" class="simple-planner__img" src="/simple-planner/images/daynight1.jpg" /> </a>
 
       <h2 style="padding-top: 80px">Process</h2>
-      <img class="simple-planner__img" src="./image/process.jpg"/>
+      <img class="simple-planner__img" src="/simple-planner/images/process.jpg"/>
       <h2 style="padding-top: 80px">Inspiration</h2>
 
       <h4 style="padding-top: 25px; padding-bottom: 25px">My struggle with being an entrepreneur and a full-time grad student</h4>
-      <img class="simple-planner__img" src="./image/inspiration from live.png"/>
+      <img class="simple-planner__img" src="/simple-planner/images/inspiration from live.png"/>
 	   <p style="padding-top: 25px" >Earlier this year, I quit my job and started transitioning from an FTE to a full-time master student, while running my consultancy remotely at the same time. Time become a scare resource for me.
 
         Meanwhile, as an Eastside resident in the ever-crowding Seattle, figuring out the best time to leave events on the west side with the consideration of traffic, parking, and the walking distance to a nearby cafe to finish some urgent task consumes a decent portion of my cognitive load on daily basis.
       <h4 style="padding-top: 50px">Users' discontent with location based reminder</h4>
 
-      <img class="simple-planner__img" style="padding-top: 10px" src="./image/ins3-08.JPG"/>
+      <img class="simple-planner__img" style="padding-top: 10px" src="/simple-planner/images/ins3-08.JPG"/>
 	   <p style="padding-top: 10px" >Earlier this year, I participated in a usability study on the reminder in the Google Ecosystem with Microsoft Outlook team.
 		We interviewed eight users who are students and/or young professionals.
 	  All the participants who went through the location based reminder task had negative experience and expressed the needs of having a better geographical reminder feature.
@@ -64,14 +65,14 @@ Simple Planner is a smart logistics assistant that can look into your daily sche
 	  <P>Below are highligts and quotes from the users.</P>
 
 		  <p style="padding-top: 10px"> <h5>Missing Functions</h5></p>
-	  <div class="simple-planner__row"> <img src="./image/ur1-1.jpg"/> <span><i>“Transit time calculation between events will be very useful.”</i></span> </div>
-  	  <div class="simple-planner__row"> <img src="./image/ur2-2.jpg"/> <span><i>“If it could remind me when I am leaving a certain location... like, don’t forget the keys."</i></span> </div>
+	  <div class="simple-planner__row"> <img src="/simple-planner/images/ur1-1.jpg"/> <span><i>“Transit time calculation between events will be very useful.”</i></span> </div>
+  	  <div class="simple-planner__row"> <img src="/simple-planner/images/ur2-2.jpg"/> <span><i>“If it could remind me when I am leaving a certain location... like, don’t forget the keys."</i></span> </div>
       <p style="padding-top: 40px"> <h5>Usability Issues</h5></p>
-      <div class="simple-planner__row"> <img src="./image/ur1.png"/> <span><i>“This is tricky 'cuz [sic] I don’t remember the address and it won’t let me look on a map.”</i></span> </div>
-      <div class="simple-planner__row"> <img src="./image/ur2.png"/> <span><i>“When I’m setting a place it doesn’t tell me it’s a reminder.”</i></span> </div>
+      <div class="simple-planner__row"> <img src="/simple-planner/images/ur1.png"/> <span><i>“This is tricky 'cuz [sic] I don’t remember the address and it won’t let me look on a map.”</i></span> </div>
+      <div class="simple-planner__row"> <img src="/simple-planner/images/ur2.png"/> <span><i>“When I’m setting a place it doesn’t tell me it’s a reminder.”</i></span> </div>
 	  <h5 style="padding-top: 30px">What works?</h5>
 		  <p>By analyzing the transcripts from the interviews, I also learned from the study what a user desires when using efficency apps. Below is a screenshot of the affinity diagram I created.</p>
-		   <img class="simple-planner__img" src="./image/affinity.jpg"/>
+		   <img class="simple-planner__img" src="/simple-planner/images/affinity.jpg"/>
 		   <h5 style="padding-top: 30px">Key findings from the affinity diagram</h5>
 		  <p style="padding-top: 20px">Affordance Consistency</p>
 <p>Keeping consistency in the UX and UI design across different views is important for users' efficiency and confidence;
@@ -80,8 +81,8 @@ It’s also important to take the mainstream efficiency APP UX conventions into 
 <p style="padding-top: 20px">Effective Visual Communication</p>
 <p>Provide simple but effective visual communication to allow user to grasp the information at a glance.
 </p>
-		  <div class="simple-planner__row"> <img src="./image/ur3.png"/> <span><i>“Google calendar is more useful when I want to have an overview of my day, my week, my month.”</i></span> </div>
-      <div class="simple-planner__row"> <img src="./image/ur4.png"/> <span><i>“I like to pick color for notes...the red ones are more urgent.”</i></span> </div>
+		  <div class="simple-planner__row"> <img src="/simple-planner/images/ur3.png"/> <span><i>“Google calendar is more useful when I want to have an overview of my day, my week, my month.”</i></span> </div>
+      <div class="simple-planner__row"> <img src="/simple-planner/images/ur4.png"/> <span><i>“I like to pick color for notes...the red ones are more urgent.”</i></span> </div>
       <h2 style="padding-top: 100px">Storyboarding</h2>
 	  <p style="padding-top: 20px" >The goal of this app is to lighten the users' logistic load and allow them to relax.</p>
       <p style="padding-top: 20px" >Target Audience</p>
@@ -93,12 +94,12 @@ It’s also important to take the mainstream efficiency APP UX conventions into 
       <h4 style="padding-top: 50px">Usage Cases</h4>
       <p>To help myself structure an intuitive information architecture, I first categorized the task into different types according to different scenarios. I then analyze different attributes that constitute the reminder for each type of task.</p>
       <div class="simple-planner__row" style="align-items: flex-start">
-        <div class="simple-planner__column"> <img src="./image/ssb1.jpg"/> <span>Task that can be done at home, such as watering plants.</span> </div>
-        <div class="simple-planner__column"> <img src="./image/ssb2.jpg"/> <span>Task that has a due time and consumes a period of time to complete it.</span> </div>
-        <div class="simple-planner__column"> <img src="./image/ssb3.jpg"/> <span>Task that consumes a period of time to complete, but has no due date and can be done anywhere, such as mood-boarding for a logo idea (in a cafe).</span> </div>
-        <div class="simple-planner__column"> <img src="./image/ssb4.jpg"/> <span>Task that need to be done at a certain type of places, such as buying donuts.</span> </div>
-        <div class="simple-planner__column"> <img src="./image/ssb5.jpg"/> <span>Task that need to be done at a certain location and also requires a period of time, such as going to a yoga studio.</span> </div>
-        <div class="simple-planner__column"> <img src="./image/ssb6.jpg"/> <span>Task that require to be done at a specified time and location, such as meetups.</span> </div>
+        <div class="simple-planner__column"> <img src="/simple-planner/images/ssb1.jpg"/> <span>Task that can be done at home, such as watering plants.</span> </div>
+        <div class="simple-planner__column"> <img src="/simple-planner/images/ssb2.jpg"/> <span>Task that has a due time and consumes a period of time to complete it.</span> </div>
+        <div class="simple-planner__column"> <img src="/simple-planner/images/ssb3.jpg"/> <span>Task that consumes a period of time to complete, but has no due date and can be done anywhere, such as mood-boarding for a logo idea (in a cafe).</span> </div>
+        <div class="simple-planner__column"> <img src="/simple-planner/images/ssb4.jpg"/> <span>Task that need to be done at a certain type of places, such as buying donuts.</span> </div>
+        <div class="simple-planner__column"> <img src="/simple-planner/images/ssb5.jpg"/> <span>Task that need to be done at a certain location and also requires a period of time, such as going to a yoga studio.</span> </div>
+        <div class="simple-planner__column"> <img src="/simple-planner/images/ssb6.jpg"/> <span>Task that require to be done at a specified time and location, such as meetups.</span> </div>
       </div>
 
 
@@ -115,43 +116,42 @@ It’s also important to take the mainstream efficiency APP UX conventions into 
 <li>A address-based location where the task can be executed (address-based location)</Li>
 </p>
 
-		  <a href="#" data-featherlight="image/sb2.jpg"> <img class="simple-planner__img" src="image/sb2.jpg" />
+		  <a href="#" data-featherlight="/simple-planner/images/sb2.jpg"> <img class="simple-planner__img" src="/simple-planner/images/sb2.jpg" />
 
 
 			 <h2 style="padding-top: 100px">Wireframing</h2>
 	<p style="padding-top: 10px">I planned out the user flow according to the attributes combination  the user can created.
 All the tasks start with only having a title and end with mark as done.
 </p>
-	</a> <a href="#" data-featherlight="image/sb3.jpg"> <img class="simple-planner__img" src="image/sb3.jpg" /> </a>
+	</a> <a href="#" data-featherlight="/simple-planner/images/sb3.jpg"> <img class="simple-planner__img" src="/simple-planner/images/sb3.jpg" /> </a>
 
 
 		<p style="padding-top: 100px">I quicky sketched out the wireframe based on the key scenarios.</p>
 
-	<a href="#" data-featherlight="image/sb4.jpg"> <img style="padding-top: 50px" class="simple-planner__img" src="image/sb4.jpg" /> </a> <a href="#" data-featherlight="image/sb5.jpg"> <img style="padding-top: 50px" class="simple-planner__img" src="image/sb5.jpg" /> </a>
+	<a href="#" data-featherlight="/simple-planner/images/sb4.jpg"> <img style="padding-top: 50px" class="simple-planner__img" src="/simple-planner/images/sb4.jpg" /> </a> <a href="#" data-featherlight="/simple-planner/images/sb5.jpg"> <img style="padding-top: 50px" class="simple-planner__img" src="/simple-planner/images/sb5.jpg" /> </a>
 
-<a href="#" data-featherlight="image/screensv2.jpg"> <img style="padding-top: 50px" class="simple-planner__img" src="image/screensv2.jpg" /> </a>
+<a href="#" data-featherlight="/simple-planner/images/screensv2.jpg"> <img style="padding-top: 50px" class="simple-planner__img" src="/simple-planner/images/screensv2.jpg" /> </a>
 
 
-<p style="text-align:center;">
-      <video style="padding-top: 50px" controls autoplay>
-      <source src="image/smart planner Apr21V3.mp4" type="video/mp4">
-      </p>
 
-	<p style="padding-top: 10px">I'm still working on the details for the visual design. Below is my current progress. If you have any suggestion, please drop me an email and let me know:)
+	<p style="margin: 50px 0">I'm still working on the details for the visual design. Below is my current progress. If you have any suggestion, please drop me an email and let me know:)
 </p>
 
 
+<p style="text-align:center; margin-bottom: 150px">
+    <video style="padding-top: 50px" controls autoplay>
+    <source src="/simple-planner/images/smart planner Apr21V3.mp4" type="video/mp4">
+    </p>
 
     </div>
   </div>
 </section>
 <!-- JS FILES -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/jquery.flexslider-min.js"></script>
-<script src="../js/retina.min.js"></script>
 <script src="../js/modernizr.js"></script>
 <script src="../js/main.js"></script>
-<script src="featherlight.min.js"></script>
+<script src="/simple-planner/featherlight.min.js"></script>
 </body>
 </html>
