--- a/ultimate-match/index.html
+++ b/ultimate-match/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Ultimate Match | Rachel Xu</title>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/flexslider.css">
 	<link rel="stylesheet" href="../css/main.css">
@@ -18,13 +20,12 @@
 <div class="tophead" role="tophead">
 	<!-- Navigation Section -->
 	<header id="header">
-		<div class="header-content clearfix"> <a class="logo" href="../index.html">Rachel</a>
+		<div class="header-content clearfix"> <a class="logo" href="/">Rachel</a>
 		<nav class="navigation" role="navigation">
 			<ul class="primary-nav">
-			<li><a href="../index.html">Home</a></li>
-			<li><a href="../index.html#services">About me</a></li>
-			<li><a href="../index.html#portfolio">projects</a></li>
-			<li><a href="../index.html#contact">contact</a></li>
+			<li><a href="/">Home</a></li>
+			<li><a href="/about">About me</a></li>
+			<li><a href="/l#contact">contact</a></li>
 			</ul>
 		</nav>
 		<a href="#" class="nav-toggle">Menu<span></span></a> </div>
@@ -119,7 +120,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/jquery.flexslider-min.js"></script>
-<script src="../js/retina.min.js"></script>
 <script src="../js/modernizr.js"></script>
 <script src="../js/main.js"></script>
 </body>
