--- a/expanse/index.html
+++ b/expanse/index.html
@@ -1,71 +1,221 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Expanse | Rachel Xu</title>
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<head>
+		<link rel="stylesheet" type="text/css" href="../css/main.css">
+		<meta charset="utf-8">
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Expanse | Rachel Xu</title>
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/flexslider.css">
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/responsive.css">
-        <link rel="stylesheet" href="/css/animate.min.css">
-        <link rel="stylesheet" href="/about/about.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    </head>
+		<link rel="stylesheet" href="/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/css/flexslider.css">
+		<link rel="stylesheet" href="/css/main.css">
+		<link rel="stylesheet" href="/css/responsive.css">
+		<link rel="stylesheet" href="/css/animate.min.css">
+		<link rel="stylesheet" href="/expanse/expanse.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	</head>
 <body>
-<!-- Header Section -->
-<section class="tophead" role="tophead">
-    <!-- Navigation Section -->
-    <header id="header">
-        <div class="header-content clearfix"> <a class="logo" href="/">Rachel</a>
-            <nav class="navigation" role="navigation">
-                <ul class="primary-nav">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about" class="current-link">About me</a></li>
-                    <li><a href="/#contact">contact</a></li>
-                </ul>
-            </nav>
-            <a href="#" class="nav-toggle">Menu<span></span></a>
-        </div>
-    </header>
-</section>
+	<!-- Header Section -->
+	<section class="tophead" role="tophead">
+		<!-- Navigation Section -->
+		<header id="header">
+			<div class="header-content clearfix"> <a class="logo" href="/">Rachel</a>
+				<nav class="navigation" role="navigation">
+					<ul class="primary-nav">
+						<li><a href="/">Home</a></li>
+						<li><a href="/about">About me</a></li>
+						<li><a href="/#contact">contact</a></li>
+					</ul>
+				</nav>
+				<a href="#" class="nav-toggle">Menu<span></span></a>
+			</div>
+		</header>
+	</section>
 
-<section class="about">
-	<img src="https://media.licdn.com/dms/image/C4E03AQFkmZIpdFHZIQ/profile-displayphoto-shrink_200_200/0?e=1537401600&v=beta&t=cRFB64RltqIH8EtTX4EG_Xm4oW5b_BfBBPwAEHZFBDI" class="about-photo"/>
-	<div class="about-container">
-		<h4 class="text-center">about me</h4>
-		<div class="about-content">
-			<p>Hey, I'm Rachel! </p>
-			<p>I used to be a team leader at Boeing, focused on creating a magical flying experience. I love research and design. Earlier this year, I made the decision to expand my expertise by exploring the dynamic tech industry. Now, I am a full-time grad student in the Human-Centered Design and Engineering program at the University of Washington and am running a design and consulting firm on the side.</p>
-			<p>You can view my <a href="http://www.kunxudesign.com">previous industrial design work here.</a></p>
-			<p>Besides research and design, I also like painting, dancing, yoga, world traveling, and reading. One of my favorite books is “Sapiens” by Yuval Noah Harari.</p>
-			<br/>
-			<p><strong>Location:</strong> Greater Seattle Area</p>
-			<p><strong>Email:</strong> <a href="mailto:kunxudesign@gmail.com">kunxudesign@gmail.com</a></p>
-			<p><strong>Resume:</strong> <a href="https://www.linkedin.com/in/kunxudesign/"><i class="fa fa-linkedin"></i></a></p>
-		</div>
+	<div class="expanse container">
+
+		<section id="intro">
+			<img class="intro-hero" src="/expanse/images/001(full-bleed).jpg"/>
+			<div class="intro-content d-flex d-center d-col">
+				<h1>Please Remain Seated</h1>
+				<h4>Reshaping the Sedentary Inflight Experience</h4>
+			</div>
+		</section>
+
+		<section id="first" class="d-flex d-center d-row">
+			<div class="d-flex d-center d-col d-grid-2-4">
+				<p>Prolong sitting can cause serious damage to the human body, including more than thirty types of chronic illnesses and acute medical issues, such as <strong>Deep Vein Thrombosis (DVT)</strong>. Taking breaks during long hours of sitting is one way to mitigate these health risks. But what do you do during a long haul flight in a cramped economy seat?</p>
+				<img src="/expanse/images/002.jpg"/>
+				<p style="text-align: center"><strong>Sitting is the new smoking</strong></p>
+			</div>
+			<div class="d-flex d-grid-1-4"></div>
+			<div class="d-flex d-start d-col d-grid-1-4">
+				<h4>Team</h4>
+				<p>Myself & 3 awesome Thesis<br/>
+				Committees<br/>
+				Karen Cheng<br/>
+				Sang-Gyeun Ahn<br/>
+				Christopher Ozubko
+				</p>
+				<h4>Role</h4>
+				<p>User Experience Researcher<br/>
+				User Experience Designer
+				</p>
+				<h4>Supported by</h4>
+				<p>UW school of Nursing<br/>
+				Commercial Aircraft Corporation of<br/>
+				China<br/>
+				Jamco America<br/>
+				Cohorts from the UW design
+				</p>
+			</div>
+		</section>
+
+		<section class="d-flex d-row" style="background: #000; width: 100%">
+			<img src="/expanse/images/003.jpg"/>
+			<p class="text-margin" style="color: #fff">I gamified the anti-DVT in-seat exercise experience for the long-haul economy class passenger, with various research and design methods.</p>
+		</section>
+
+		<section class="d-flex d-row d-grid-100">
+			<p class="text-margin">The highlight of my design is the rapid iteration at the original scale of the seat. It expedited user testing significantly.</p>
+			<img src="/expanse/images/004.jpg"/>
+		</section>
+
+		<section class="d-flex d-center d-grid-100">
+			<iframe src="https://player.vimeo.com/video/142200439" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		</section>
+
+		<section class="d-flex d-center d-col text-center d-grid-100">
+			<h2>Process</h2>
+			<img src="/expanse/images/005mayNeedSomeAdjustment.jpg"/>
+		</section>
+
+		<section class="d-flex d-center d-row d-grid-100">
+			<div>
+				<h4>Desktop Research</h4>
+				<p>To make it easier for me to build connections between the information as well as to explain it to discuss my rationals with my committees, I made a big physical board with selected information.</p>
+				<p>From desktop research, I formed the initial research questions and found the people for experts interviews.</p>
+			</div>
+			<img src="/expanse/images/006.jpg"/>
+		</section>
+
+		<section class="d-flex d-center d-row d-grid-100">
+			<div>
+				<h4>Expert Interview</h4>
+				<p>I consulted with Dr. Brenda Zierler and Dr. Basia, experts of DVT.</p>
+				<p>By interviewing them, I realized that prolonged sitting during the long haul flight is a problem that has been under-addressed. </p>
+				<p>Prolong sitting in cramped space compound with dehydration will drastically increase the risk of DVT</p>
+				<p>Doctors also suggested directions, such as providing more space for the passengers to relax, encouraging them to drink more water, and most importantly reminding them to work out their calf muscles.</p>
+			</div>
+			<img src="/expanse/images/007.jpg"/>
+		</section>
+
+		<section class="d-flex d-center d-row d-grid-100">
+			<div>
+				<h4>Field Trip</h4>
+				<p>To gain more insights, I conducted contextual research. I took a round flight from Seattle to Chicago and collected data to inform the following ideation process</p>
+			</div>
+			<img src="/expanse/images/008.jpg"/>
+		</section>
+		<section class="no-margin d-flex d-center d-row d-grid-100">
+			<p>Photos and noties from the field trip were arranged for discussion.</p>
+			<img src="/expanse/images/009.jpg"/>
+		</section>
+
+		<section class="d-flex d-center d-row d-grid-100">
+			<div>
+				<h4>Ideation</h4>
+				<p>Sketching is my favorite way to ideate and communicate concepts. I like clipping sketches and pin them together.<br/>
+				Overtime, I will have an ideation wall that shows my thinking process to people around, so they give me their suggestion easily.</p>
+			</div>
+			<img src="/expanse/images/010.jpg"/>
+		</section>
+		<section class="no-margin d-flex d-center d-row d-grid-100">
+			<p>Physical computation is powerful to validate idea at an early stage. For this project, I used a pressure sensor and led lights to prove the idea of embedding pressure sensors in the seat pan.</p>
+			<img src="/expanse/images/011.jpg"/>
+		</section>
+
+		<section class="d-flex d-center d-row d-grid-100">
+			<div>
+				<h4>3D Modeling</h4>
+				<p>To ensure that the design aligns with Federal aviation regulation (FAR), I referred to the current economy seat structure for the parameters and main structure design.</p>
+			</div>
+			<img src="/expanse/images/012.jpg"/>
+		</section>
+
+		<section class="d-flex d-center d-row d-grid-100">
+			<div>
+				<h4>Rapid Prototyping</h4>
+				<p>I used cardboard for iteration. Compared with prototyping using the 3D printer or other expansive materials, which is commonly seen in the airline industry, I found cardboard prototyping more ecient. It allows for both accuracy and quick modification.</p>
+			</div>
+			<img src="/expanse/images/013.jpg"/>
+		</section>
+
+		<section class="d-flex d-center d-row d-grid-100">
+			<div class="d-flex d-col d-grid-2-4">
+				<h4>User Testing</h4>
+				<p>Asking my picky designer friends to sit in my cardboard chair probably is the most exacting part of this project.</p>
+				<p>I conducted rapid prototyping and user testings at the same time and adjust the design accordingly immediately after each test.</p>
+			</div>
+			<div class="d-flex d-col d-grid-2-4">
+				<img src="/expanse/images/014.jpg"/>
+				<img src="/expanse/images/015.jpg"/>
+				<img src="/expanse/images/016.jpg"/>
+				<img src="/expanse/images/017.jpg"/>
+			</div>
+		</section>
+
+		<section class="d-flex d-center d-col d-grid-100">
+			<img src="/expanse/images/018.jpg"/>
+			<p class="d-flex d-col d-grid-1-4">Several seats were built in a week following users feedbacks to test different ideas.</p>
+		</section>
+
+		<section class="d-flex d-start d-row d-grid-100">
+			<div class="d-flex d-col d-grid-1-4">
+				<h4>Video Editing</h4>
+				<p>I created the surface in Rhino 3D and rendered the animation in Keyshot. The video was created in two days in After Effect.</p>
+			</div>
+		</section>
+
+		<section class="no-margin d-flex d-center d-row d-grid-100">
+			<img src="/expanse/images/019.jpg"/>
+		</section>
+
+		<section class="d-flex d-center d-row d-grid-100">
+			<div class="d-flex d-col d-grid-1-4">
+				<h4>Exhibition Design</h4>
+				<p>The project was exhibited in Henry Art Gallery. I iterated different exhibition designs to see how can I better communicate the design to a</p>
+			</div>
+			<div class="d-flex d-end d-grid-3-4">
+				<img src="/expanse/images/020.jpg"/>
+			</div>
+		</section>
+
+		<section class="no-margin d-flex d-center d-row d-grid-100">
+			<img src="/expanse/images/021.jpg"/>
+		</section>
+		<section class="no-margin d-flex d-center d-row d-grid-100">
+			<img src="/expanse/images/022.jpg"/>
+		</section>
+
 	</div>
-</section>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
-
 <script>
 $(document).ready(function() {
-    // Header Scroll
-    $(window).on('scroll', function() {
-        var scroll = $(window).scrollTop();
+	// Header Scroll
+	$(window).on('scroll', function() {
+		var scroll = $(window).scrollTop();
 
-        if (scroll >= 50) {
-            $('#header').addClass('fixed');
-        } else {
-            $('#header').removeClass('fixed');
-        }
-    });
+		if (scroll >= 50) {
+			$('#header').addClass('fixed');
+		} else {
+			$('#header').removeClass('fixed');
+		}
+	});
 });
 </script>
 </body></html>
