--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				<ul class="primary-nav">
 					<li><a href="#" class="current-link">Home</a></li>
 					<li><a href="/about">About me</a></li>
+					<li><a href="#projects">Projects</a></li>
 					<li><a href="#contact">contact</a></li>
 				</ul>
 			</nav>
@@ -38,108 +39,61 @@
 	<!-- Navigation Section -->
 </section>
 
-<!-- portfolio grid section -->
-<section id="portfolio" class="section portfolio" style="max-width: 1700px;">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-6 portfolio-item"> <a href="/simple-planner" class="portfolio-link">
-				<div class="caption">
-					<div class="caption-content">
-						<h3>Simple Planner</h3>
-						<h4>User Experience Design</h4>
-					</div>
+<!-- projects grid section -->
+<section id="projects" style="max-width: 1700px;">
+	<div class="d-flex d-row d-wrap">
+		<!-- <div class="col-sm-6 projects-item"> <a href="/simple-planner" class="projects-link">
+			<div class="caption">
+				<div class="caption-content">
+					<h3>Simple Planner</h3>
+					<h4>User Experience Design</h4>
 				</div>
-				<img src="simple-planner/images/hero-mainpage.jpg" class="img-responsive" alt=""></a>
 			</div>
+			<img src="simple-planner/images/hero-mainpage.jpg" class="img-responsive" alt=""></a>
+		</div> -->
 
-			<div class="col-sm-6 portfolio-item"> <a href="/ultimate-match" class="portfolio-link">
-				<div class="caption">
-					<div class="caption-content">
-						<h3>Ultimate Match</h3>
-						<h4>Speculative Design_Mixed Reality</h4>
-					</div>
+		<div class="d-grid-2-4 projects-item"> <a href="/expanse" class="projects-link">
+			<div class="caption">
+				<div class="caption-content">
+					<h3>Please Remain Seated</h3>
+					<h4>Reshaping the Sedentary Inflight Experience</h4>
 				</div>
-				<img src="images/portfolio/ultimate-match.jpg" class="img-responsive" alt=""></a>
 			</div>
+			<img src="/expanse/images/021.jpg" class="img-responsive" alt=""></a>
+		</div>
 
-			<div class="col-sm-6 portfolio-item"> <a href="/interactive" class="portfolio-link">
-				<div class="caption">
-					<div class="caption-content">
-						<h3>Interactive Experiments</h3>
-						<h4>Explorative Animation Collection</h4>
-					</div>
+		<div class="d-grid-2-4 projects-item"> <a href="/immersive-cabin" class="projects-link" style="width: 100%; height: 100%;">
+			<div class="caption">
+				<div class="caption-content">
+					<h3>Immersive Cabin Experience</h3>
+					<h4>Research to Reduce visually-induced motion sickness</h4>
 				</div>
-				<img src="images/portfolio/balls.jpg" class="img-responsive" alt=""></a>
 			</div>
+			<img src="/immersive-cabin/boeing-allure.jpg" class="img-responsive" style="width: 100%; height: 100%;"></a>
+		</div>
 
-			<div class="col-sm-6 portfolio-item"> <a href="/expanse" class="portfolio-link">
-				<div class="caption">
-					<div class="caption-content">
-						<h3>Please Remain Seated</h3>
-						<h4>Reshaping the Sedentary Inflight Experience</h4>
-					</div>
+		<div class="d-grid-2-4 projects-item"> <a href="/ultimate-match" class="projects-link">
+			<div class="caption">
+				<div class="caption-content">
+					<h3>Ultimate Match</h3>
+					<h4>Speculative Design_Mixed Reality</h4>
 				</div>
-				<img src="images/expanse/021.jpg" class="img-responsive" alt=""></a>
 			</div>
+			<img src="images/portfolio/ultimate-match.jpg" class="img-responsive" alt=""></a>
+		</div>
 
-			<div class="col-sm-6 portfolio-item"> <a href="/immersive-cabin" class="portfolio-link">
-				<div class="caption">
-					<div class="caption-content">
-						<h3>Immersive Cabin Experience</h3>
-						<h4>Research to Reduce visually-induced motion sickness</h4>
-					</div>
+		<div class="d-grid-2-4 projects-item"> <a href="/interactive" class="projects-link">
+			<div class="caption">
+				<div class="caption-content">
+					<h3>Interactive Experiments</h3>
+					<h4>Explorative Animation Collection</h4>
 				</div>
-				<img src="/immersive-cabin/boeing-allure.jpg" class="img-responsive" alt=""></a>
 			</div>
+			<img src="images/portfolio/balls.jpg" class="img-responsive" alt=""></a>
 		</div>
 	</div>
 </section>
-<!-- portfolio grid section -->
-
-<!-- Testimonials section -->
-<section id="testimonials" class="section testimonials">
-	<div class="container-fluid">
-		<div class="row no-gutter">
-			<div class="flexslider">
-				<ul class="slides">
-					<li>
-						<div class="col-md-12">
-							<blockquote>
-								<h1>"One should aim not at being possible to understand, but at being impossible to misunderstand. " </h1>
-								<p>Quintilian</p>
-							</blockquote>
-						</div>
-					</li>
-					<li>
-						<div class="col-md-12">
-							<blockquote>
-								<h1>"Ease of use may be invisible, but its absence sure isn’t." </h1>
-								<p>IBM Design on Twitter</p>
-							</blockquote>
-						</div>
-					</li>
-					<li>
-						<div class="col-md-12">
-							<blockquote>
-								<h1>"Good design is about process, not product." </h1>
-								<p> Jared Sinclair</p>
-							</blockquote>
-						</div>
-					</li>
-					<li>
-						<div class="col-md-12">
-							<blockquote>
-								<h1>"Make every detail perfect &amp; limit the number of details to perfect." </h1>
-								<p>Jack dorsey</p>
-							</blockquote>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- Testimonials section -->
+<!-- projects grid section -->
 
 <!-- footer section -->
 <footer id="contact" class="footer">
